scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest01d.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest01d;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)  // Also unsat
{
	choice at A
	{
		1(x:int) from A to B; @"(x < 10)"
		do Proto1(A, B);
	}
	or
	{
		2(y:int) from A to B; @"(y > 5)"
		do Proto1(A, B);
	}
}
//*/
